--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -482,6 +482,15 @@
     background-color: #222831;
     color: #ffffff;
   }
+
+  .food_section .filters_menu li.active a {
+    background-color: #222831;
+    color: #ffffff;
+  }
+
+  .food_section .filters_menu li a {
+    color: #222831;
+  }
   
   .food_section .box {
     position: relative;
