--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1333,3 +1333,20 @@
     font-family: "Vazir", Arial, Helvetica, sans-serif !important;
   }
 }
+
+
+/* Fade In Image */
+
+.fade-in-image{
+  animation:fadeIn 1s;
+}
+
+@keyframes fadeIn {
+  0%{
+    opacity:0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
